--- a/process.html
+++ b/process.html
@@ -9,6 +9,9 @@ var Person = function (firstName) {
   this.firstName = firstName;
   console.log('Person instantiated');
 };
+Person.prototype.sayHello = function() {
+  console.log("Hello, I'm " + this.firstName);
+};
 
 var person1 = new Person('Alice');
 var person2 = new Person('Bob');
@@ -20,9 +23,10 @@ console.log('person2 is ' + person2.firstName); // logs "person2 is Bob"
 </script>
 <body> 
 <script>
+	en();
 	var person3= new Person('trent');
 	console.log('Person instantiated 11');
-	en();
+	
 </script>
 
 </body>
