--- a/process.html
+++ b/process.html
@@ -26,6 +26,7 @@ console.log('person2 is ' + person2.firstName); // logs "person2 is Bob"
 	en();
 	var person3= new Person('trent');
 	console.log('Person instantiated 11');
+	person3.sayHello();
 	
 </script>
 
