--- a/ext_sets/ext.html
+++ b/ext_sets/ext.html
@@ -1,3 +1,5 @@
+<html>
+<head>
 <script type="text/javascript" src="D:/Git/Project_Complaint/ext_sets/ext-4.0.1/ext-all.js"></script>
 <script type="text/javascript" src="D:/Git/Project_Complaint/ext_sets/ext-4.0.1/ext.js"></script>
 <script>
@@ -11,3 +13,13 @@ Ext.define('Student',
     console.log('Student object created');
 });
 </script>
+</head>
+<body> 
+<script>
+alert(1);
+	var studentObj = Ext.create('Student');
+	studentObj.getName();
+</script>
+
+</body>
+</html>
