--- a/ext_sets/mvc_example/app/ext.html
+++ b/ext_sets/mvc_example/app/ext.html
@@ -4,7 +4,9 @@
 <script type="text/javascript" src="D:/Git/Project_Complaint/ext_sets/ext-4.0.1/ext-all.js"></script>
 <script type="text/javascript" src="D:/Git/Project_Complaint/ext_sets/ext-4.0.1/ext.js"></script>
 <script type="text/javascript" src="D:/Git/Project_Complaint/ext_sets/ext-4.0.1/ext-all-debug.js"></script>
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="app.js"></script>
+<!--http://stackoverflow.com/questions/10851687/need-to-convert-extjs-sample-app-to-mvc-application-->
+
 
 </head>
 <body> 
